--- a/Search.html
+++ b/Search.html
@@ -3,27 +3,81 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title id="title"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
   </head>
-  <body>
-    <header class="sticky-top container-fluid">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          Brand
-        </a>
+  <body id="body" class="" style="background-image: url('images/default.png');">
+    <main>
+      <img src="images/logo.png" class="rounded border border-1 border-black w-25 mt-4 mx-auto d-block" alt="...">
+      <h2 class="text-center my-3" id="title">TNF Custom Search Page</h2>
+      <div class="container align-self-center mt-3">
+        <form action="https://www.google.com/search" method="GET">
+          <div class="form-floating mx-auto mb-3 w-75 h-25 rounded-5">
+            <input type="search" class="form-control rounded-5" id="floatingInput" name="q" placeholder="#floatingInput">
+            <label for="floatingInput"><img src="images/logo.png" class="mx-1 search-icon rounded-5">Search</label>
+          </div>
+        </form>
       </div>
-    </header>
-    <div class="container align-self-center mt-3">
-      <form action="https://www.google.com/search" method="GET">
-        <div class="form-floating mb-3">
-          <input type="search" class="form-control" id="floatingInput" name="q">
-          <label for="floatingInput">Search</label>
-          <input type="submit" class="btn btn-primary" />
+    </main>
+      <div class="dropup-center dropup sticky-bottom">
+        <button class="btn btn-secondary me-1 mb-1 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Menu
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#personalitation" href="#personalitation">Personalization</a></li>
+          <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#setCookies" href="#setCookies">Cookies</a></li>
+          <li><a class="dropdown-item" href="#">Action three</a></li>
+        </ul>
+      </div>
+      <div class="modal fade" id="setCookies">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" tabindex="-1" aria-labelledby="setCookies" aria-hidden="true">
+          <div class="modal-content">
+            <div class="modal-body">
+              <h3 class="text-center">Cookies</h3>
+              <p class="text-muted">We'll use cookies to improve user experience. By accepting our cookie policy, you can personalize several themes such as background, title, logo, etc. We don't collect any sensitive information and any information entered is only used to customize the page display.</p>
+              <button type="button" class="btn btn-primary container my-2" data-bs-dismiss="modal" id="acceptCookies">Accept</button>
+              <button type="button" class="btn btn-secondary container mb-2" data-bs-dismiss="modal" id="rejectCookies">Close</button>
+            </div>
+          </div>
         </div>
-      </form>
-    </div>
+      </div>
+      <div class="modal fade modal-dialog-scrollable modal-fullscreen-down" id="personalitation" tabindex="-1" aria-labelledby="personalitation" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen-down">
+          <form method="POST" accept-charset="utf-8">
+            <div class="modal-content">
+              <div class="modal-header d-grid row">
+                <div class="row-cols-1">
+                  <p>Configure your search page bellow!</p>    
+                </div>
+                <div class="row-cols-1">
+                  <small class="text-muted">we'll use cookies to save your changes. So, please accept all aditional cookies for better experience. <a class="text-muted" data-bs-toggle="modal" data-bs-target="#setCookies" href="#setCookies">Set cookies now!</a></small>
+                </div>
+              </div>
+              <div class="modal-body">
+                <div class="input-group mb-3">
+                  <label class="input-group-text" for="setLogo">Choice Logo</label>
+                  <input type="file" name="setLogo" class="form-control" id="setLogo" accept="image/*">
+                </div>
+                <div class="input-group mb-3">
+                  <label class="input-group-text" for="setBackground">Choice Background</label>
+                  <input type="file" name="setBackground" class="form-control" id="setBackground" accept="image/*">
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default">Set Title</span>
+                  <input type="text" name="setTitle" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="save">Save</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="script/main.js" type="text/javascript" charset="utf-8"></script>
+    <script src="script/cookie.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
