--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
         </form>
         <h3 class="text-center text-muted my-2">Or</h3>
-        <a href="search.html" class="btn btn-primary mt-3">Click here</a>
+        <a href="Search.html" class="btn btn-primary mt-3">Click here</a>
       </div>
     </div>
     <script>
